<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Metric Converter</string>
    <string name="title">Metric Converter</string>
    <string name="select_metric">Select Metric</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="enter_value">Enter value</string>
    <string name="invalid_input">Invalid input</string>
</resources>